Revision history for Perl extension At.pm

{{$NEXT}}

0.04 2024-01-06T21:14:08Z

    - ...don't write tests that fail when an otherwise unimportant page on the internet changes

0.03 2024-01-06T20:58:02Z

    - Full support for core At protocol and Bluesky extensions

0.02 2023-11-22T04:14:23Z

    - Fix synopsis
    - Split At::Bluesky from At.pm because PAUSE ignores subclasses in perl's new class syntax

0.01 2023-11-22T03:44:15Z

    - original version